--- a/sass/components/_tablet.scss
+++ b/sass/components/_tablet.scss
@@ -1,211 +1,13 @@
 @media screen and (min-width: 768px) and (max-width: 1200px) {
-    .menu-button {
-        display: none;
-    }
-
-    .header {
-        padding: 18px 0;
-    }
-
-
-    .header-contact {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-    .navigation {
-        @include font4(14px, 0.28px, normal, 500);
-        @include font2(Roboto, break-word);
-        color: $gray-text;
-
-        position: relative;
-
-        width: unset;
-        background-color: unset;
-        transform: unset;
-        transition: unset;
-    }
-
-
-    .navigation-list {
-
-        flex-direction: row;
-        gap: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-        font-size: inherit;
-
-
-        &__item--active &__link::after {
-            width: 100%;
-        }
-
-        &__link {
-            font-size: 14px;
-        }
-    }
-    .hero {
-        padding: 100px;
-
-        &__title {
-            @include font4(26px, 1.56px, 1.61, 800);
-        }
-    }
-
-    .feature {
-        padding: 60px 0;
-    }
-
-    .feature-list {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 30px;
-        &__item {
-            flex-basis: calc((100% - 30px) /2);
-            display: block;
-        }
-
-        &__item::before {
-
-            width: 100%;
-
-        }
-
-        &__text {
-            margin-bottom: 30px;
-        }
-    }
-
-    .box {
-        display: none;
-    }
-
-    .team {
-        padding: 60px 0;
-
-        &__main-title {
-            @include font4(28px, 0.84px, normal, 600);
-            margin-bottom: 50px;
-        }
-    }
-
-    .team-list {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 30px;
-
-        &__item {
-            flex-basis: calc((100% - 30px) / 2);
-        }
-
-        &__img {
-
-            width: 100%;
-        }
-    }
-
-    .clients {
-        padding: 60px 0;
-
-        &__title {
-            @include font4(28px, 0.84px, normal, 600);
-            margin-bottom: 30px;
-        }
-    }
-
-    .clients-list {
-        gap: 30px;
-        flex-wrap: wrap;
-
-        &__item {
-            flex-basis: calc((100% - 60px) / 3);
-        }
-
-        &__link {
-            width: 100%;
-        }
-    }
-
-    .footer__container {
-        justify-content: unset;
-        align-items: unset;
-        flex-direction: unset;
-        flex-wrap: wrap;
-        gap: 60px;
-    }
-
-    .footer-contacts,
-    .footer-join {
-        flex-basis: calc((100% - 60px) / 2);
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .address {
-        text-align: center;
-    }
-
-    .footer-subscribe {
-        flex-basis: 100%;
-        width: unset;
-
-        &__title {
-            text-align: center;
-        }
-    }
-
-    .footer-form {
-        gap: 20px;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-
-        &__input {
-            width: 450px;
-            margin-right: unset;
-        }
-    }
-
-    .modal-form {
-        min-width: 450px;
-        width: unset;
-
-        &__header {
-            text-align: center;
-            font-family: 'Roboto';
-            @include font4(20px, 0.6, normal, 700);
-        }
-    
-       &__checkbox-text {
-            display: inline;
-            vertical-align: middle;
-            @include font4(12px, normal, 0.36, 400);
-        }
-    }
-
+   @import "./tablet/tablet.header";
+   @import "./tablet/tablet.navigation";
+   @import "./tablet/tablet.hero";
+   @import "./tablet/tablet.feature";
+   @import "./tablet/tablet.box";
+   @import "./tablet/tablet.team";
+   @import "./tablet/tablet.clients";
+   @import "./tablet/tablet.footer";
+   @import "./tablet/tablet.modal";
+   @import "./tablet/tablet.portfolio";
    
-
-    .portfolio {
-        padding: 60px 0;
-
-
-        &__filters-list {
-            flex-wrap: unset;
-        }
-    }
-
-    .portfolio__filters {
-        padding-bottom: 30px;
-        
-    }
-
-    .portfolio-list {
-        flex-direction: row;
-        align-items: center;
-        &__item {
-            flex-basis: calc((100% - 60px)/2);
-        }
-    }
 }
